--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,30 +1,37 @@
-name: Build Windows EXE
+name: Build and Upload Windows EXE
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  build:
+  build-windows:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.8'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.8'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pyinstaller
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pyinstaller
 
-    - name: Build EXE
-      run: |
-        pyinstaller --onefile --windowed script.py
+      - name: Build EXE
+        run: |
+          pyinstaller --onefile --windowed script.py
 
-    - name: Upload artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: script-exe
-        path: dist/script.exe
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: script-windows-exe
+          path: dist/script.exe
+          # optional: kürzere Aufbewahrungsdauer
+          # retention-days: 7
