--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Build EXE
         run: |
-          pyinstaller --onefile --windowed script.py
+          pyinstaller --onefile --windowed ATOSScompact.py
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
