--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -25,13 +25,9 @@ jobs:
           pip install pyinstaller
 
       - name: Build EXE (no UPX)
+        shell: bash
         run: |
-          pyinstaller \
-            --onefile \
-            --windowed \
-            --noupx \
-            --clean \
-            ATOSScompact.py
+          pyinstaller --onefile --windowed --noupx --cleanATOSScompact.py
 
       - name: Upload Windows EXE
         uses: actions/upload-artifact@v4
